Fixed variable collision in LESS and SASS. @slink/ now refer to standard link color in colors.scss/.less.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ TO USE LESS WITHOUT A COMPILER, UNCOMMENT THIS AND COMMENT OUT THE PRECEEDING LI
 
 	</header>
 	<section id="main-container" class="container">
-
+<i class="icon-linux"></i> Hello <i class="icon-btc"></i>
 	</section>
 	<footer class="container">
 
