--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title></title>
+	<title>Testing</title>
 	<meta name="description" content="" />
 	<meta name="author" content="" />
 <!-- Reference to humans.txt -->
@@ -19,7 +19,9 @@
 <!-- Place your favicon.ico and apple-touch-icon.png in the site root folder instead of referencing them here -->
 
 <!-- Your main stylesheet for all media. Increment version number to bust cache -->
-	<link rel="stylesheet" href="css/style.css?v=2" />
+	<!-- build:css({.tmp,./}) css/style.css -->
+	<link rel="stylesheet" href="css/style.css" />
+	<!-- endbuild -->
 
 <!--
 TO USE LESS WITHOUT A COMPILER, UNCOMMENT THIS AND COMMENT OUT THE PRECEEDING LINK TO 'style.css'
@@ -59,8 +61,11 @@ TO USE LESS WITHOUT A COMPILER, UNCOMMENT THIS AND COMMENT OUT THE PRECEEDING LI
 	<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if necessary -->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="js/libs/jquery1.9.1.min.js"><\/script>')</script>
+
+	<!-- build:js({.tmp,./}) js/scripts.all.js -->
 	<script src="js/plugins.js"></script>
 	<script src="js/scripts.js"></script>
+	<!-- endbuild -->
 
 	<!-- Put your Analytics Snippet here -->
 
